[gd_scene load_steps=44 format=3 uid="uid://dl1w6m0osnr1k"]

[ext_resource type="Script" uid="uid://dnqpqhqr0sdhg" path="res://scripts/Enemy/mr_crab.gd" id="1_j3h7g"]
[ext_resource type="Texture2D" uid="uid://coanryeb0pfok" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 01.png" id="2_3ekwp"]
[ext_resource type="Texture2D" uid="uid://cuhftwribn3es" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 02.png" id="3_37cyb"]
[ext_resource type="Texture2D" uid="uid://q8gbsk6ogeqe" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 03.png" id="4_f5sjn"]
[ext_resource type="Texture2D" uid="uid://da3x2dbylwmqr" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 01.png" id="5_n13tp"]
[ext_resource type="Texture2D" uid="uid://ch0cdthfm1fqi" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 02.png" id="6_061sc"]
[ext_resource type="Texture2D" uid="uid://cc2bggug4b43n" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 03.png" id="7_bnfyr"]
[ext_resource type="Texture2D" uid="uid://csvfrvl51nrol" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 04.png" id="8_vnuek"]
[ext_resource type="Texture2D" uid="uid://dloacwsy2wqi0" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 01.png" id="9_y2aad"]
[ext_resource type="Texture2D" uid="uid://cp4hels8xjj2s" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 02.png" id="10_ii4f2"]
[ext_resource type="Texture2D" uid="uid://bwm77bk32d4u0" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 03.png" id="11_fsuy8"]
[ext_resource type="Texture2D" uid="uid://bm4df36cm1frq" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 04.png" id="12_dbugc"]
[ext_resource type="Texture2D" uid="uid://x82rtee5q2kt" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 01.png" id="13_um8g4"]
[ext_resource type="Texture2D" uid="uid://dtj08kudrtqr4" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 02.png" id="14_2str3"]
[ext_resource type="Texture2D" uid="uid://bbn3g7gtl7sv3" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 03.png" id="15_40pf6"]
[ext_resource type="Texture2D" uid="uid://dc1eq66hb8ek5" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 04.png" id="16_dtmil"]
[ext_resource type="Texture2D" uid="uid://bwpb8tpt0gcd2" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 01.png" id="17_1u0mt"]
[ext_resource type="Texture2D" uid="uid://cl3url0s8qn04" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 02.png" id="18_oimh0"]
[ext_resource type="Texture2D" uid="uid://cbh37cy6y2713" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 03.png" id="19_7gh3v"]
[ext_resource type="Texture2D" uid="uid://djanfwaq1nsla" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 04.png" id="20_kecd4"]
[ext_resource type="Texture2D" uid="uid://3mhptpqkoxgq" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 01.png" id="21_fvfv4"]
[ext_resource type="Texture2D" uid="uid://ce35wl4v5xvvo" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 02.png" id="22_g0n72"]
[ext_resource type="Texture2D" uid="uid://03uc0tln0n45" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 03.png" id="23_ijkuw"]
[ext_resource type="Texture2D" uid="uid://uw8kt8661j58" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 04.png" id="24_ioves"]
[ext_resource type="Texture2D" uid="uid://d182bnskddu1c" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 05.png" id="25_idlxd"]
[ext_resource type="Texture2D" uid="uid://d1nwys2b7cegu" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 06.png" id="26_rpc43"]
[ext_resource type="Texture2D" uid="uid://4elv8k3lrf8e" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 07.png" id="27_djb65"]
[ext_resource type="Texture2D" uid="uid://buxgri0vy3tuj" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 08.png" id="28_qcbm8"]
[ext_resource type="Texture2D" uid="uid://biilevmtsnmvu" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 09.png" id="29_6h0ln"]
[ext_resource type="Texture2D" uid="uid://7x6v3jwjs0bt" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 01.png" id="30_ylrb2"]
[ext_resource type="Texture2D" uid="uid://bsshib054sldf" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 02.png" id="31_hqs1s"]
[ext_resource type="Texture2D" uid="uid://byfrnujw6jbq0" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 03.png" id="32_4ibl0"]
[ext_resource type="Texture2D" uid="uid://c84d3g5nh6oi8" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 04.png" id="33_ujpnu"]
[ext_resource type="Texture2D" uid="uid://dksiv2j5e6sqc" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 05.png" id="34_2cgnd"]
[ext_resource type="Texture2D" uid="uid://b8w6xfvnkesnq" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 06.png" id="35_8pyxh"]
[ext_resource type="Texture2D" uid="uid://dww0iibodv8j7" path="res://assets/Hearts/PNG/basic/background.png" id="36_yn34x"]
[ext_resource type="Texture2D" uid="uid://cumvgnn4pup63" path="res://assets/Hearts/PNG/basic/border.png" id="37_43d7r"]
[ext_resource type="Texture2D" uid="uid://jkwemgh2sdsx" path="res://assets/Hearts/PNG/basic/heart.png" id="38_ucsha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0bmuy"]
size = Vector2(77.125, 14.875)

[sub_resource type="SpriteFrames" id="SpriteFrames_n3ms4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3ekwp")
}, {
"duration": 1.0,
"texture": ExtResource("3_37cyb")
}, {
"duration": 1.0,
"texture": ExtResource("4_f5sjn")
}],
"loop": true,
"name": &"Anticipation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_n13tp")
}, {
"duration": 1.0,
"texture": ExtResource("6_061sc")
}, {
"duration": 1.0,
"texture": ExtResource("7_bnfyr")
}, {
"duration": 1.0,
"texture": ExtResource("8_vnuek")
}],
"loop": false,
"name": &"Attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_y2aad")
}, {
"duration": 1.0,
"texture": ExtResource("10_ii4f2")
}, {
"duration": 1.0,
"texture": ExtResource("11_fsuy8")
}, {
"duration": 1.0,
"texture": ExtResource("12_dbugc")
}],
"loop": false,
"name": &"Dead_ground",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_um8g4")
}, {
"duration": 1.0,
"texture": ExtResource("14_2str3")
}, {
"duration": 1.0,
"texture": ExtResource("15_40pf6")
}, {
"duration": 1.0,
"texture": ExtResource("16_dtmil")
}],
"loop": false,
"name": &"Dead_hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_1u0mt")
}, {
"duration": 1.0,
"texture": ExtResource("18_oimh0")
}, {
"duration": 1.0,
"texture": ExtResource("19_7gh3v")
}, {
"duration": 1.0,
"texture": ExtResource("20_kecd4")
}],
"loop": false,
"name": &"Hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_fvfv4")
}, {
"duration": 1.0,
"texture": ExtResource("22_g0n72")
}, {
"duration": 1.0,
"texture": ExtResource("23_ijkuw")
}, {
"duration": 1.0,
"texture": ExtResource("24_ioves")
}, {
"duration": 1.0,
"texture": ExtResource("25_idlxd")
}, {
"duration": 1.0,
"texture": ExtResource("26_rpc43")
}, {
"duration": 1.0,
"texture": ExtResource("27_djb65")
}, {
"duration": 1.0,
"texture": ExtResource("28_qcbm8")
}, {
"duration": 1.0,
"texture": ExtResource("29_6h0ln")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_ylrb2")
}, {
"duration": 1.0,
"texture": ExtResource("31_hqs1s")
}, {
"duration": 1.0,
"texture": ExtResource("32_4ibl0")
}, {
"duration": 1.0,
"texture": ExtResource("33_ujpnu")
}, {
"duration": 1.0,
"texture": ExtResource("34_2cgnd")
}, {
"duration": 1.0,
"texture": ExtResource("35_8pyxh")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_230n2"]
radius = 10.875
height = 53.25

[sub_resource type="CircleShape2D" id="CircleShape2D_6helu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2c0s7"]
radius = 11.0

[node name="MrCrab" type="CharacterBody2D" groups=["Boss"]]
scale = Vector2(8, 8)
script = ExtResource("1_j3h7g")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0.9375, 4.5625)
shape = SubResource("RectangleShape2D_0bmuy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_n3ms4")
animation = &"Hit"

[node name="TakeDamage" type="Area2D" parent="."]
position = Vector2(1, 1.125)
rotation = 1.5707964

[node name="TakeDamageArea" type="CollisionShape2D" parent="TakeDamage"]
shape = SubResource("CapsuleShape2D_230n2")

[node name="WallDetector" type="Area2D" parent="."]
position = Vector2(-28.625, 1.125)
rotation = 1.5707964

[node name="WallDetectorArea" type="CollisionShape2D" parent="WallDetector"]
shape = SubResource("CircleShape2D_6helu")

[node name="Timer" type="Timer" parent="."]

[node name="CharacterShape" type="CollisionShape2D" parent="."]
position = Vector2(1, 1.125)
rotation = 1.5707964
shape = SubResource("CircleShape2D_2c0s7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
texture_filter = 1
offset_left = -13.125
offset_top = -8.125
offset_right = 367.875
offset_bottom = -8.125
scale = Vector2(0.10480982, 0.11817226)

[node name="heart" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(73, 0)
layout_mode = 2

[node name="heart_bg" type="Sprite2D" parent="HBoxContainer/heart"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("36_yn34x")

[node name="heart_border" type="Sprite2D" parent="HBoxContainer/heart"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("37_43d7r")

[node name="heart" type="Sprite2D" parent="HBoxContainer/heart"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("38_ucsha")

[node name="heart2" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(73, 0)
layout_mode = 2

[node name="heart_bg" type="Sprite2D" parent="HBoxContainer/heart2"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("36_yn34x")

[node name="heart_border" type="Sprite2D" parent="HBoxContainer/heart2"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("37_43d7r")

[node name="heart" type="Sprite2D" parent="HBoxContainer/heart2"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("38_ucsha")

[node name="heart3" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(73, 0)
layout_mode = 2

[node name="heart_bg" type="Sprite2D" parent="HBoxContainer/heart3"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("36_yn34x")

[node name="heart_border" type="Sprite2D" parent="HBoxContainer/heart3"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("37_43d7r")

[node name="heart" type="Sprite2D" parent="HBoxContainer/heart3"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("38_ucsha")

[node name="heart4" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(73, 0)
layout_mode = 2

[node name="heart_bg" type="Sprite2D" parent="HBoxContainer/heart4"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("36_yn34x")

[node name="heart_border" type="Sprite2D" parent="HBoxContainer/heart4"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("37_43d7r")

[node name="heart" type="Sprite2D" parent="HBoxContainer/heart4"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("38_ucsha")

[node name="heart5" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(73, 0)
layout_mode = 2

[node name="heart_bg" type="Sprite2D" parent="HBoxContainer/heart5"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("36_yn34x")

[node name="heart_border" type="Sprite2D" parent="HBoxContainer/heart5"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("37_43d7r")

[node name="heart" type="Sprite2D" parent="HBoxContainer/heart5"]
position = Vector2(-37, -89)
scale = Vector2(4, 4)
texture = ExtResource("38_ucsha")

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_entered_body"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_exited_body"]
[connection signal="area_entered" from="TakeDamage" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
